# taskrun

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/taskrun-admin-client/: Cargo.toml
crates/taskrun-admin-client/src/: error.rs  grpc.rs  http.rs  lib.rs
crates/taskrun-claude-sdk/: Cargo.toml
crates/taskrun-claude-sdk/src/: client.rs  error.rs  executor.rs  lib.rs  protocol.rs  types.rs
crates/taskrun-cli/: Cargo.toml
crates/taskrun-cli/src/: main.rs
crates/taskrun-control-plane/: Cargo.toml
crates/taskrun-control-plane/src/: config.rs  http.rs  lib.rs  main.rs  metrics.rs  scheduler.rs  state.rs
crates/taskrun-control-plane/src/crypto/: cert_extractor.rs  mod.rs  token.rs
crates/taskrun-control-plane/src/http/: mod.rs  responses.rs
crates/taskrun-control-plane/src/http/handlers/: enrollment.rs  events.rs  health.rs  mod.rs  responses_openai.rs  workers.rs
crates/taskrun-control-plane/src/http/mcp/: tools.rs
crates/taskrun-control-plane/src/service/: mod.rs  mtls.rs  run_service.rs  task_service.rs  worker_service.rs
crates/taskrun-core/: Cargo.toml
crates/taskrun-core/src/: chat.rs  error.rs  event.rs  ids.rs  lib.rs  model.rs  status.rs  task.rs  worker.rs
crates/taskrun-proto/: Cargo.toml  build.rs
crates/taskrun-proto/src/: convert.rs  lib.rs
crates/taskrun-server/: Cargo.toml
crates/taskrun-server/src/: app.rs  backend.rs  event.rs  main.rs  mcp.rs  render.rs  state.rs
crates/taskrun-server/src/control_plane/: metrics.rs  mod.rs  scheduler.rs  state.rs
crates/taskrun-server/src/control_plane/crypto/: ca.rs  mod.rs  token.rs
crates/taskrun-server/src/control_plane/http/: mod.rs
crates/taskrun-server/src/control_plane/http/handlers/: enrollment.rs  events.rs  health.rs  mod.rs  responses_openai.rs  workers.rs
crates/taskrun-server/src/control_plane/http/mcp/: mod.rs  tools.rs  types.rs
crates/taskrun-server/src/control_plane/service/: mtls.rs  run_service.rs  task_service.rs  worker_service.rs
crates/taskrun-server/src/views/: dialogs.rs  logs.rs  mod.rs  run_detail.rs  tasks.rs  workers.rs
crates/taskrun-tui/: Cargo.toml
crates/taskrun-tui-components/: Cargo.toml
crates/taskrun-tui-components/src/: lib.rs  utils.rs
crates/taskrun-tui-components/src/widgets/: chat.rs  dialogs.rs  events.rs  footer.rs  header.rs  logs.rs  mod.rs  run_detail.rs  table.rs
crates/taskrun-tui/src/: app.rs  backend.rs  event.rs  main.rs  state.rs
crates/taskrun-tui/src/ui/: mod.rs  render.rs
crates/taskrun-tui/src/worker/: app.rs  backend.rs  connection.rs  event.rs  executor.rs  mod.rs  render.rs  setup.rs  state.rs
crates/taskrun-ui/: Cargo.toml
crates/taskrun-ui/src/: lib.rs  theme.rs
crates/taskrun-ui/src/widgets/: mod.rs
crates/taskrun-worker/: Cargo.toml
crates/taskrun-worker/src/: config.rs  connection.rs  executor.rs  json_output.rs  main.rs
crates/taskrun-worker/src/tui/: app.rs  backend.rs  connection.rs  executor.rs  render.rs  setup.rs  state.rs
devtools/: Cargo.toml  Trunk.toml  index.html
devtools/src/: app.rs  lib.rs
devtools/src-tauri/: Cargo.toml  tauri.conf.json
devtools/src-tauri/src/: commands.rs  grpc_client.rs  main.rs
devtools/src/api/: client.rs  mod.rs  streaming.rs  types.rs
devtools/src/components/: metrics.rs  mod.rs  playground.rs  sidebar.rs  tasks.rs  workers.rs
docs/: openai_compat.md  project.md
docs/security/: worker-enrollment.md
proto/taskrun/v1/: common.proto  run_service.proto  task_service.proto  worker_service.proto
scripts/: demo.sh  gen-dev-certs.sh  gen-worker-cert.sh
