[workspace]
resolver = "2"
members = [
    "crates/taskrun-core",
    "crates/taskrun-proto",
    "crates/taskrun-control-plane",
    "crates/taskrun-worker",
    "crates/taskrun-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/filipelabs/taskrun"
authors = ["Filipe Labs"]

[workspace.dependencies]
# Domain/Core
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# gRPC/Protobuf
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
