[workspace]
resolver = "2"
members = [
    "crates/taskrun-core",
    "crates/taskrun-proto",
    "crates/taskrun-worker",
    "crates/taskrun-cli",
    "crates/taskrun-claude-sdk",
    "crates/taskrun-server",
    "crates/taskrun-tui-components",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/filipelabs/taskrun"
authors = ["Filipe Labs"]

[workspace.dependencies]
# Domain/Core
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"

# gRPC/Protobuf
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Crypto
rcgen = "0.13"
x509-parser = "0.16"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
pem = "3.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# MCP (Model Context Protocol)
rmcp = { version = "0.11", features = ["server", "transport-streamable-http-server", "axum"] }
tokio-util = { version = "0.7", features = ["rt"] }
schemars = "1.0"
