[package]
name = "taskrun-admin-client"
version = "0.1.0"
edition = "2021"
description = "Admin client library for TaskRun TUI"

[dependencies]
taskrun-core = { path = "../taskrun-core" }
taskrun-proto = { path = "../taskrun-proto" }

# Async
tokio = { workspace = true }

# gRPC
tonic = { workspace = true }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
