[package]
name = "taskrun-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TaskRun control plane server"

[lib]
name = "taskrun_control_plane"
path = "src/lib.rs"

[[bin]]
name = "taskrun-control-plane"
path = "src/main.rs"

[dependencies]
taskrun-core = { path = "../taskrun-core" }
taskrun-proto = { path = "../taskrun-proto" }

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# gRPC
tonic.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# HTTP server
axum.workspace = true
tower-http.workspace = true
futures-util = "0.3"

# Crypto
rcgen.workspace = true
x509-parser.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
pem.workspace = true
