[package]
name = "taskrun-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TaskRun control plane server with TUI"

[[bin]]
name = "taskrun-server"
path = "src/main.rs"

[dependencies]
# Internal crates
taskrun-core = { path = "../taskrun-core" }
taskrun-proto = { path = "../taskrun-proto" }
taskrun-tui-components = { path = "../taskrun-tui-components" }

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true

# gRPC
tonic.workspace = true

# HTTP
axum.workspace = true
tower-http.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# Time
chrono.workspace = true

# Utilities
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-width = "0.2"

# MCP (Model Context Protocol)
rmcp.workspace = true
tokio-util.workspace = true
schemars.workspace = true

# HTTP
futures-util = "0.3"

# Crypto (for certificate authority)
rcgen.workspace = true
x509-parser.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
pem.workspace = true
