[package]
name = "taskrun-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for TaskRun"

[[bin]]
name = "taskrun-tui"
path = "src/main.rs"

[dependencies]
taskrun-core = { path = "../taskrun-core" }
taskrun-proto = { path = "../taskrun-proto" }
taskrun-admin-client = { path = "../taskrun-admin-client" }
taskrun-claude-sdk = { path = "../taskrun-claude-sdk" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { workspace = true }

# gRPC
tonic = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
