[package]
name = "taskrun-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TaskRun worker daemon"

[[bin]]
name = "taskrun-worker"
path = "src/main.rs"

[dependencies]
taskrun-core = { path = "../taskrun-core" }
taskrun-proto = { path = "../taskrun-proto" }
taskrun-claude-sdk = { path = "../taskrun-claude-sdk" }

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# gRPC
tonic.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Utilities
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
async-trait.workspace = true
