[package]
name = "taskrun-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TaskRun worker daemon"

[[bin]]
name = "taskrun-worker"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm", "taskrun-tui-components", "uuid", "ctrlc"]

[dependencies]
taskrun-core = { path = "../taskrun-core" }
taskrun-proto = { path = "../taskrun-proto" }
taskrun-claude-sdk = { path = "../taskrun-claude-sdk" }

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# gRPC
tonic.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Utilities
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

# TUI (optional)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
taskrun-tui-components = { path = "../taskrun-tui-components", optional = true }
uuid = { workspace = true, optional = true }
ctrlc = { version = "3.4", optional = true }
