[package]
name = "taskrun-devtools-tauri"
version = "0.1.0"
description = "TaskRun DevTools - Tauri backend"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# gRPC client
taskrun-proto = { path = "../../crates/taskrun-proto" }
tonic = { version = "0.12", features = ["tls"] }
pem = "3.0"
chrono = { version = "0.4", features = ["std", "clock"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
